--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,19 @@
         android:stretchMode="columnWidth"
         android:gravity="center"
         />
+    <TextView android:id="@+id/labelSubjects"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Subjects" />
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/subjectsGridView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:columnWidth="90dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        />
 </RelativeLayout>
