--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#e2e2e2"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.inkriti.questionbank.SearchActivity"
     tools:showIn="@layout/activity_search">
@@ -16,7 +13,6 @@
         android:id="@+id/searchlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
     </ListView>
 
 </RelativeLayout>
